added modified task solution

--- a/SL/hw3/task4.html
+++ b/SL/hw3/task4.html
@@ -187,7 +187,6 @@ hljs.initHighlightingOnLoad();
 
 <pre><code class="r">library(MASS)
 library(e1071)
-library(rmarkdown)
 </code></pre>
 
 <pre><code class="r">source(&quot;stepCV.R&quot;)
@@ -195,46 +194,130 @@ library(rmarkdown)
 
 <p>Пример посложнее</p>
 
-<pre><code class="r">Advertising &lt;- read.csv(&quot;data/Advertising.csv&quot;)
+<pre><code class="r">Advertising &lt;- read.csv(&quot;data/Advertising.csv&quot;)[, - c(1)]
 l &lt;- lm(Sales~. , Advertising)
-stepCV(l, trace = TRUE)
+stepCV(l, trace = TRUE, direction=&quot;backward&quot;, data = Advertising)
 </code></pre>
 
-<pre><code>## Start:  CV.performance=3.06
-## Sales ~ X + TV + Radio + Newspaper
+<pre><code>## Start:  CV.performance=2.95
+## Sales ~ TV + Radio + Newspaper
 ## 
 ##                     Df rank      CV
-## - TV        -15.855293    4 18.7673
-## - Radio      -7.030925    4  9.9429
-## - X          -0.049747    4  2.9618
-## &lt;none&gt;                    5  2.9120
-## - Newspaper   0.022077    4  2.8899
+## - TV        -15.880674    3 18.7643
+## - Radio      -6.968705    3  9.8523
+## - Newspaper  -0.085503    3  2.9691
+## &lt;none&gt;                    4  2.8836
 ## 
-## Step:  CV.performance=19.22
-## Sales ~ X + Radio + Newspaper
-## 
-##                    Df rank     CV
-## - Radio     -7.502128    3 26.322
-## &lt;none&gt;                   4 18.819
-## - Newspaper  0.051988    3 18.767
-## - X          0.359721    3 18.460
-## 
-## Step:  CV.performance=27.09
-## Sales ~ X + Newspaper
+## Step:  CV.performance=19.27
+## Sales ~ Radio + Newspaper
 ## 
 ##                   Df rank     CV
-## - Newspaper -0.57776    2 27.493
-## &lt;none&gt;                  3 26.915
-## - X          0.62277    2 26.292
+## - Radio     -7.81900    2 26.381
+## - Newspaper -0.28481    2 18.846
+## &lt;none&gt;                  3 18.562
+## 
+## Step:  CV.performance=26.31
+## Sales ~ Newspaper
+## 
+##                 Df rank     CV
+## &lt;none&gt;                2 26.343
+## - Newspaper 26.343    1  0.000
 </code></pre>
 
 <pre><code>## 
 ## Call:
-## lm(formula = Sales ~ X + Newspaper, data = Advertising)
+## lm(formula = Sales ~ Newspaper, data = Advertising)
 ## 
 ## Coefficients:
-## (Intercept)            X    Newspaper  
-##    12.52105     -0.00150      0.05408
+## (Intercept)    Newspaper  
+##    12.35141      0.05469
+</code></pre>
+
+<pre><code class="r">stepCV((lm(Sales~1, Advertising)), trace = TRUE, direction=&quot;forward&quot;, scope=Sales~I(Radio*Newspaper) + Radio + TV, data = Advertising )
+</code></pre>
+
+<pre><code>## Start:  CV.performance=0
+## Sales ~ 1
+## 
+##                             Df rank     CV
+## + I(Radio * Newspaper) -22.988    2 22.988
+## + Radio                -18.335    2 18.335
+## + TV                   -10.829    2 10.829
+## &lt;none&gt;                            1  0.000
+## 
+## Step:  CV.performance=23.06
+## Sales ~ I(Radio * Newspaper)
+## 
+##              Df rank      CV
+## &lt;none&gt;             2 23.0699
+## + Radio  3.9288    3 19.1411
+## + TV    16.2736    3  6.7963
+</code></pre>
+
+<pre><code>## 
+## Call:
+## lm(formula = Sales ~ I(Radio * Newspaper), data = Advertising)
+## 
+## Coefficients:
+##          (Intercept)  I(Radio * Newspaper)  
+##            12.114256              0.002314
+</code></pre>
+
+<pre><code class="r">stepCV((lm(Sales~TV+Radio, Advertising)), trace = TRUE, direction=&quot;both&quot;, scope=list(lower=Sales~1, upper=Sales~I(Radio*Newspaper) + Radio + TV), data = Advertising)$anova
+</code></pre>
+
+<pre><code>## Start:  CV.performance=2.88
+## Sales ~ TV + Radio
+## 
+##                                Df rank      CV
+## - TV                   -15.513795    2 18.3865
+## - Radio                 -7.910542    2 10.7832
+## + I(Radio * Newspaper)   0.026471    4  2.9702
+## &lt;none&gt;                               3  2.8727
+## 
+## Step:  CV.performance=18.44
+## Sales ~ Radio
+## 
+##                              Df rank      CV
+## + I(Radio * Newspaper) -0.45779    3 18.9446
+## &lt;none&gt;                             2 18.3045
+## + TV                   15.53938    3  2.9474
+## - Radio                18.30451    1  0.0000
+## 
+## Step:  CV.performance=19.33
+## Sales ~ Radio + I(Radio * Newspaper)
+## 
+##                              Df rank      CV
+## - Radio                -4.66810    2 23.5180
+## &lt;none&gt;                             3 18.8499
+## - I(Radio * Newspaper)  0.50387    2 18.3460
+## + TV                   15.79309    4  2.9926
+## 
+## Step:  CV.performance=22.88
+## Sales ~ I(Radio * Newspaper)
+## 
+##                            Df rank      CV
+## &lt;none&gt;                           2 22.8902
+## + Radio                 3.748    3 18.8672
+## + TV                   15.744    3  6.8711
+## - I(Radio * Newspaper) 22.890    1  0.0000
+</code></pre>
+
+<pre><code>## Stepwise Model Path 
+## Analysis of Deviance Table
+## 
+## Initial Model:
+## Sales ~ TV + Radio
+## 
+## Final Model:
+## Sales ~ I(Radio * Newspaper)
+## 
+## 
+##                     Step performance rank        CV
+## 1                           2.884226    3  2.884226
+## 2                   - TV   18.439401    2 18.439401
+## 3 + I(Radio * Newspaper)   19.327842    3 19.327842
+## 4                - Radio   22.880074    2 22.880074
 </code></pre>
 
 <p>Можно сравнить результат с stepAIC:</p>
@@ -242,24 +325,14 @@ stepCV(l, trace = TRUE)
 <pre><code class="r">stepAIC(l, trace = TRUE)
 </code></pre>
 
-<pre><code>## Start:  AIC=214.71
-## Sales ~ X + TV + Radio + Newspaper
+<pre><code>## Start:  AIC=212.79
+## Sales ~ TV + Radio + Newspaper
 ## 
 ##             Df Sum of Sq    RSS    AIC
-## - Newspaper  1      0.13  556.7 212.75
-## - X          1      0.22  556.8 212.79
-## &lt;none&gt;                    556.6 214.71
-## - Radio      1   1354.48 1911.1 459.42
-## - TV         1   3056.91 3613.5 586.82
-## 
-## Step:  AIC=212.75
-## Sales ~ X + TV + Radio
-## 
-##         Df Sum of Sq    RSS    AIC
-## - X      1      0.18  556.9 210.82
-## &lt;none&gt;                556.7 212.75
-## - Radio  1   1522.57 2079.3 474.29
-## - TV     1   3060.94 3617.7 585.05
+## - Newspaper  1      0.09  556.9 210.82
+## &lt;none&gt;                    556.8 212.79
+## - Radio      1   1361.74 1918.6 458.20
+## - TV         1   3058.01 3614.8 584.90
 ## 
 ## Step:  AIC=210.82
 ## Sales ~ TV + Radio
@@ -279,7 +352,7 @@ stepCV(l, trace = TRUE)
 ##     2.92110      0.04575      0.18799
 </code></pre>
 
-<p>Результаты получаются разные (Sales~X + Newspaper при вызове stepCV, при вызове stepAIC - другой результат)</p>
+<p>Результаты получаются разные.</p>
 
 </body>
 
